1.74.0/libs/log/test/compile_fail/CVS/Entries.Extra
/attr_functor_void_return.cpp////*////
